force-app/main/default/objects/Announcement__c/Announcement__c.object-meta.xml
<CustomObject>
    <description>A carousel message which will appear on the user&apos;s homepage. Manage multiple messages, add links, and schedule times for messages to run.</description>
    <label>Carousel Announcement</label>
    <nameField>
        <label>Announcement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carousel Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>