force-app/main/default/objects/Announcement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to make this message appear in the homepage carousel.  Overrides any run dates, if they are set.</description>
    <inlineHelpText>Check to make this message appear in the Home Page Carousel.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>