force-app/main/default/objects/Announcement__c/fields/Announcement_HTML__c.field-meta.xml
<CustomField>
    <fullName>Announcement_HTML__c</fullName>
    <description>The copy to display in the carousel when this message is active.</description>
    <inlineHelpText>The copy to display in the carousel when this message is active.</inlineHelpText>
    <label>Announcement HTML</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>