force-app/main/default/objects/Announcement__c/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <description>Add a link to any page on this message by entering the URL here.</description>
    <inlineHelpText>Add a link to any page on this message by entering the URL here.</inlineHelpText>
    <label>URL/Link</label>
    <type>Url</type>
</CustomField>