force-app/main/default/objects/Announcement__c/recordTypes/Home_Carousel_Announcement.recordType-meta.xml
<RecordType>
    <fullName>Home_Carousel_Announcement</fullName>
    <active>true</active>
    <label>Home Carousel Announcement</label>
</RecordType>