force-app/main/default/objects/Announcement__c/recordTypes/Home_Carousel_Calendar.recordType-meta.xml
<RecordType>
    <fullName>Home_Carousel_Calendar</fullName>
    <active>false</active>
    <label>Home Carousel Calendar</label>
</RecordType>