force-app/main/default/objects/Announcement__c/validationRules/End_Date_can_not_be_in_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_can_not_be_in_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Active__c = TRUE,
End_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>End Date can not be in the past on active Announcements</errorMessage>
</ValidationRule>