force-app/main/default/objects/Announcement__c/validationRules/Start_Date_must_be_before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Start Date must be before End Date</errorMessage>
</ValidationRule>