force-app/main/default/objects/Announcement__c/listViews/All_Active_Announcements.listView-meta.xml
<ListView>
    <fullName>All_Active_Announcements</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>User_Type_Visibility__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Announcements</label>
    <language>en_US</language>
</ListView>